k8s/10-debugging-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golem-debugging-service
  namespace: golem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golem-debugging-service
  template:
    metadata:
      labels:
        app: golem-debugging-service
    spec:
      containers:
      - name: debugging-service
        image: golemservices/golem-debugging-service:v1.5.2
        volumeMounts:
        - name: scheduler-data
          mountPath: /data
        ports:
        - name: http
          containerPort: 8086
        resources:
          requests:
            memory: 512Mi
            cpu: 100m
          limits:
            memory: 2Gi
      volumes:
      - name: scheduler-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: golem-debugging-service
  namespace: golem
spec:
  selector:
    app: golem-debugging-service
  ports:
  - name: http
    port: 8086
    targetPort: 8086
